[gd_scene load_steps=4 format=3 uid="uid://cximn5k6vc4lg"]

[ext_resource type="Script" path="res://main_graph_view/scripts/node_view_image.gd" id="1_3ocrs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vhp4"]
bg_color = Color(0.392157, 0.372549, 0.423529, 0.980392)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_3k8lv"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_6vhp4")

[node name="NodeViewImage" type="TextureRect"]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 2
theme = SubResource("Theme_3k8lv")
expand_mode = 2
script = ExtResource("1_3ocrs")

[node name="ImageFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="AddImageButton" type="Button" parent="."]
layout_mode = 2
offset_left = 41.0
offset_right = 59.0
offset_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"
flat = true

[connection signal="file_selected" from="ImageFileDialog" to="." method="_on_image_file_dialog_file_selected"]
[connection signal="pressed" from="AddImageButton" to="." method="_on_button_pressed"]
